# IMC-Analysis-Pipeline

./: LICENSE  README.md  _imcpipe.py  imcpipe.py  pipeline.ipynb  setup.cfg
cp4-pipe/: 1-prepare-ilastik.cppipe
imcpipe/: __init__.py  imgproc.py  mcd.py  utils.py
