[metadata]
name = imcpipe
version = 0.1.0
author = Mr.Milk
author_email = yb97643@um.edu.mo
description = In-house imc preprocessing utility
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mr-Milk/IMC-Analysis-Pipeline
project_urls =
    Bug Tracker = https://github.com/Mr-Milk/IMC-Analysis-Pipeline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages_dir =
    = .
packages = find:
python_requires = >=3.6